fixed issue with div collapsing

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html,body {
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    white-space:nowrap;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
     font-size: 14px;
@@ -57,6 +58,7 @@ p {
     font-size: 11px;
     display: inline-block;
     padding: 0px 30px;
+    white-space: normal;
 }
 
 img {
